--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -21,132 +21,152 @@
     "advertising_agency": "Рекламное Агентство <br \\/>Полного Цикла",
     "about": {
       "name": "О нас",
-      "description": "Мы — маркетинговое агентство полного цикла. Наша команда соединяет стратегию, креатив и аналитику, чтобы ваш бизнес развивался быстрее конкурентов. Мы понимаем рынок и говорим на языке цифр, а не обещаний."
+      "desc": "Мы — маркетинговое агентство полного цикла. Наша команда соединяет стратегию, креатив и аналитику, чтобы ваш бизнес развивался быстрее конкурентов. Мы понимаем рынок и говорим на языке цифр, а не обещаний."
     },
     "about_1": {
       "name": "В digital-индустрии",
-      "description": "Это наш фундамент. Мы прошли вместе с рынком путь от первых SMM-экспериментов до продвинутой аналитики и автоматизации. Теперь этот опыт работает на вас."
+      "desc": "Это наш фундамент. Мы прошли вместе с рынком путь от первых SMM-экспериментов до продвинутой аналитики и автоматизации. Теперь этот опыт работает на вас."
     },
     "about_2": {
       "name": "Реализованных проектов в 5 странах",
-      "description": "За это время мы накопили практический опыт работы в разных нишах и с компаниями любого масштаба — от локальных стартапов до международных брендов."
+      "desc": "За это время мы накопили практический опыт работы в разных нишах и с компаниями любого масштаба — от локальных стартапов до международных брендов."
     },
     "about_3": {
       "name": "Индекс удовлетворенности заказчиков *",
-      "description": "Это не просто цифра, а подтверждение того, что мы умеем слышать задачи бизнеса и превращать их в результат.",
+      "desc": "Это не просто цифра, а подтверждение того, что мы умеем слышать задачи бизнеса и превращать их в результат.",
       "notice": "* согласно проведенному исследованию Oyster Computer от 24.11.2023"
     },
     "case_1": {
       "name": "WATCHBOX Middle East",
-      "description": "Лидогенерация через Instagram / Facebook Ads (Ближний Восток)"
+      "desc": "Лидогенерация через Instagram / Facebook Ads (Ближний Восток)"
     },
     "case_2": {
       "name": "YouDo",
-      "description": "Создание программного обеспечения. Участие в разработке мобильного приложения"
+      "desc": "Создание программного обеспечения. Участие в разработке мобильного приложения"
     },
     "case_3": {
       "name": "CETUS Protocol",
-      "description": "Проведение маркетинговой кампании с элементами онбординга пользователей"
+      "desc": "Проведение маркетинговой кампании с элементами онбординга пользователей"
     },
     "case_4": {
       "name": "ALLU Auction United Arab Emirates",
-      "description": "Лидогенерация при помощи контекстной рекламы Google Ads (ОАЭ и Гонконг)"
+      "desc": "Лидогенерация при помощи контекстной рекламы Google Ads (ОАЭ и Гонконг)"
     },
     "case_5": {
       "name": "OKX Crypto Exchange",
-      "description": "Участие в работах по редизайну платформы"
+      "desc": "Участие в работах по редизайну платформы"
     },
     "case_6": {
       "name": "Т-БАНК",
-      "description": "Создание презентаций финансовых продуктов"
+      "desc": "Создание презентаций финансовых продуктов"
     },
     "case_7": {
       "name": "WISE TRANSFER",
-      "description": "Участие в работах по редизайну интернет-ресурсов"
+      "desc": "Участие в работах по редизайну интернет-ресурсов"
     },
     "case_8": {
       "name": "AX CAPITAL",
-      "description": "Проведение маркетинговой кампании для постоянных клиентов (Россия и ОАЭ)"
+      "desc": "Проведение маркетинговой кампании для постоянных клиентов (Россия и ОАЭ)"
     },
     "service": {
       "name": "Услуги",
-      "description": "Полный перечень маркетинговых инструментов и практик для масштабирования вашего бизнеса и продвижения личного бренда"
+      "desc": "Полный перечень маркетинговых инструментов и практик для масштабирования вашего бизнеса и продвижения личного бренда"
     },
     "seo_1": {
       "name": "SEO",
-      "description": "Продвигайте ваш сайт в поисковой выдаче Яндекс и Google"
+      "desc": "Продвигайте ваш сайт в поисковой выдаче Яндекс и Google"
     },
     "seo_2": {
       "name": "Контекстная реклама",
-      "description": "Воспользуйтесь самым результативным рекламным инструментом для лидогенерации при помощи Яндекс.Директ и Google Ads"
+      "desc": "Воспользуйтесь самым результативным рекламным инструментом для лидогенерации при помощи Яндекс.Директ и Google Ads"
     },
     "seo_3": {
       "name": "Социальные сети",
-      "description": "Продвижение в Instagram / TikTok / VK / Дзен / YouTube / RuTube / Snapchat / X (ex-Twitter)"
+      "desc": "Продвижение в Instagram / TikTok / VK / Дзен / YouTube / RuTube / Snapchat / X (ex-Twitter)"
     },
     "seo_4": {
       "name": "Instagram / Facebook Ads",
-      "description": "Запустите рекламу в Instagram / Facebook для быстрой генерации качественных лидов и новых клиентов"
+      "desc": "Запустите рекламу в Instagram / Facebook для быстрой генерации качественных лидов и новых клиентов"
     },
     "seo_5": {
       "name": "SEO",
-      "description": "Продвигайте ваш сайт в поисковой выдаче Яндекс и Google"
+      "desc": "Продвигайте ваш сайт в поисковой выдаче Яндекс и Google"
     },
     "seo_6": {
       "name": "Telegram Ads",
-      "description": "Продвигайте свой канал. Запускайте рекламу в Telegram Ads или в крупных популярных каналах"
+      "desc": "Продвигайте свой канал. Запускайте рекламу в Telegram Ads или в крупных популярных каналах"
     },
     "seo_7": {
       "name": "SERM",
-      "description": "Управляйте репутацией бизнеса в Сети. Мы разместим положительные отзывы о вас на 100+ площадках"
+      "desc": "Управляйте репутацией бизнеса в Сети. Мы разместим положительные отзывы о вас на 100+ площадках"
     },
     "seo_8": {
       "name": "Маркетплейс",
-      "description": "Продвигайте ваш магазинна крупнейших маркетплейсах. Авито / Ozon / Wildberries"
+      "desc": "Продвигайте ваш магазинна крупнейших маркетплейсах. Авито / Ozon / Wildberries"
     },
     "seo_9": {
       "name": "Crypto Marketing",
-      "description": "Развивайте интерес к своему проекту среди наиболее вовлеченной и платежеспособной аудитории крипто сообщества"
+      "desc": "Развивайте интерес к своему проекту среди наиболее вовлеченной и платежеспособной аудитории крипто сообщества"
     },
     "seo_10": {
       "name": "Лидеры мнений",
-      "description": "Закажите рекламу вашего бизнеса у популярных блогеров и лидеров мнений. Пригласите их на съемки вашего контента"
+      "desc": "Закажите рекламу вашего бизнеса у популярных блогеров и лидеров мнений. Пригласите их на съемки вашего контента"
     },
     "seo_11": {
       "name": "PR",
-      "description": "Повысьте узнаваемость бренда при помощи СМИ. Расскажите о себе на страницах крупных интернет-изданий"
+      "desc": "Повысьте узнаваемость бренда при помощи СМИ. Расскажите о себе на страницах крупных интернет-изданий"
     },
     "seo_12": {
       "name": "Контент",
-      "description": "Закажите создание медиа контента для вашего сайта и социальных сетей. Reels / Видео / Мемы."
+      "desc": "Закажите создание медиа контента для вашего сайта и социальных сетей. Reels / Видео / Мемы."
     },
     "seo_13": {
       "name": "Рассылки",
-      "description": "Запустите E-mail / SMS / Telegram рассылку, чтобы сообщить потенциальным клиентам важные новости"
+      "desc": "Запустите E-mail / SMS / Telegram рассылку, чтобы сообщить потенциальным клиентам важные новости"
     },
     "seo_14": {
       "name": "Facebook",
-      "description": "Заблокировали или не работает рекламный аккаунт? Решим проблемы с экосистемой FB. Оплата за результат"
+      "desc": "Заблокировали или не работает рекламный аккаунт? Решим проблемы с экосистемой FB. Оплата за результат"
     },
     "dev_1": {
       "name": "Сайты",
-      "description": "Закажите разработку сайта или лендинга любой сложности"
+      "desc": "Закажите разработку сайта или лендинга любой сложности"
     },
     "dev_2": {
       "name": "Мобильные приложения",
-      "description": "Расширьте экосистему вашего бизнеса с мобильным приложением на iOS / Android"
+      "desc": "Расширьте экосистему вашего бизнеса с мобильным приложением на iOS / Android"
     },
     "dev_3": {
       "name": "Telegram-боты",
-      "description": "Воспользуйтесь функционалом Telegram для оптимизации бизнес-процессов. Закажите создание бота для любых целей"
+      "desc": "Воспользуйтесь функционалом Telegram для оптимизации бизнес-процессов. Закажите создание бота для любых целей"
     },
     "dev_4": {
       "name": "Дизайн",
-      "description": "Полный перечень услуг веб-дизайна для вашего бизнеса: от создания логотипа до брендирования товаров и услуг"
+      "desc": "Полный перечень услуг веб-дизайна для вашего бизнеса: от создания логотипа до брендирования товаров и услуг"
     },
     "dev_5": {
       "name": "Презентации",
-      "description": "Закажите профессиональную презентацию вашего бизнеса / товаров / услуг"
+      "desc": "Закажите профессиональную презентацию вашего бизнеса / товаров / услуг"
+    },
+    "team_1": {
+      "title": "Присоединяйся к команде",
+      "name": "",
+      "desc": "Экспертиза в области цифрового маркетинга позволяет нам быстро принимать решения и демонстрировать серьезные результаты. У нас есть открытые вакансии. Оставьте заявку на сайте со своими контактными данными, чтобы узнать больше."
+    },
+    "team_2": {
+      "title": "Присоединяйся к команде",
+      "name": "Возможность",
+      "desc": "Для нас не имеют значения внешность, возраст, локация или взгляды кандидата. Важны только талант, умение трудиться, желание развиваться и возможность всегда быть на связи."
+    },
+    "team_3": {
+      "title": "Присоединяйся к команде",
+      "name": "Рост и обучение",
+      "desc": "Отсутствие знаний и опыта в той или иной сфере - не препятствие, а стимул к освоению нового направления деятельности. Мы проводим обучение на примере реальных кейсов и помогаем развивать свои навыки."
+    },
+    "team_4": {
+      "title": "Присоединяйся к команде",
+      "name": "Хорошее вознаграждение",
+      "desc": "Мы обеспечим оплату любых инструментов, сервисов и нейросетей для комфортной работы, уровень дохода выше среднерыночных показателей и множество возможностей для получения премии. Мы уважаем труд, поэтому оплачиваем даже тестовые задания."
     }
   },
   "price": {
@@ -243,26 +263,13 @@
       "desc": "Каждый проект — уникален. Мы не используем шаблонные подходы, а разрабатываем стратегию, которая работает именно для вашего бизнеса."
     }
   },
-  "team": {
-    "slide_1": {
-      "title": "Присоединяйся к команде",
-      "name": "",
-      "desc": "Экспертиза в области цифрового маркетинга позволяет нам быстро принимать решения и демонстрировать серьезные результаты. У нас есть открытые вакансии. Оставьте заявку на сайте со своими контактными данными, чтобы узнать больше."
-    },
-    "slide_2": {
-      "title": "Присоединяйся к команде",
-      "name": "Возможность",
-      "desc": "Для нас не имеют значения внешность, возраст, локация или взгляды кандидата. Важны только талант, умение трудиться, желание развиваться и возможность всегда быть на связи."
-    },
-    "slide_3": {
-      "title": "Присоединяйся к команде",
-      "name": "Рост и обучение",
-      "desc": "Отсутствие знаний и опыта в той или иной сфере - не препятствие, а стимул к освоению нового направления деятельности. Мы проводим обучение на примере реальных кейсов и помогаем развивать свои навыки."
-    },
-    "slide_4": {
-      "title": "Присоединяйся к команде",
-      "name": "Хорошее вознаграждение",
-      "desc": "Мы обеспечим оплату любых инструментов, сервисов и нейросетей для комфортной работы, уровень дохода выше среднерыночных показателей и множество возможностей для получения премии. Мы уважаем труд, поэтому оплачиваем даже тестовые задания."
+  "feedback": {
+    "title": "Заполните форму и мы свяжемся с Вами в течение 15 минут",
+    "desc": "Заполните короткую форму, оставьте свой номер телефона или telegram юзернейм, и персональный ассистент свяжется с вами в течение 15 минут",
+    "form": {
+      "name": "Ваше имя",
+      "phone": "Ваш номер телефона",
+      "send": "Отправить"
     }
   },
   "text": {
